@@ -44,7 +44,12 @@
 
 #pragma mark -
 
-id<HCMatcher> HC_conformsToProtocol(Protocol *aProtocol)
+id<HCMatcher> HC_conformsTo(Protocol *aProtocol)
 {
     return [HCConformsToProtocol conformsToProtocol:aProtocol];
+}
+
+id<HCMatcher> HC_conformsToProtocol(Protocol *aProtocol)
+{
+    return HC_conformsTo(aProtocol);
 }
